--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <title>My first webpage, with MDL</title>
+    <title>My first webpage, favicon</title>
   </head>
    <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
