--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <h1>See the favicon above. </h1>
     <p>
-      <a href="./index2.html">My index2.html page</a>
+      <a href="./index2.html">Pretty Cool Link</a>
     </p>
   </body>
 </html>
